src/stylesheet/global.css
@import url('https://fonts.googleapis.com/css2?family=Teko&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');

[data-theme='light'] {
  --color-text-base: hsl(0, 0%, 11%);
  --color-primary: hsl(333, 71%, 51%);
  --color-secondary: hsl(84, 100%, 59%);
  --color-bg: hsl(60, 2%, 89%);
  --color-bg-footer: hsl(0, 0%, 100%);
  --color-svg: hsl(0, 0%, 11%);
  --color-licence: hsl(333, 100%, 34%);
  --color-btn-bg: hsl(333, 71%, 51%);
  --color-btn-hover: hsl(60, 2%, 89%);
  --color-btn-border: hsl(333, 71%, 51%);
  --color-btn-border-hover: hsl(333, 71%, 51%);
  --color-btn-text: hsl(0, 0%, 100%);
}
[data-theme='dark'] {
  --color-text-base: hsl(60, 2%, 89%);
  --color-primary: hsl(333, 71%, 51%);
  --color-secondary: hsl(84, 100%, 59%);
  --color-bg: hsl(0, 0%, 11%);
  --color-bg-footer: hsl(0, 0%, 4%);
  --color-svg: hsl(60, 2%, 89%);
  --color-licence: hsl(333, 64%, 55%);
  --color-btn-bg: hsl(333, 71%, 51%);
  --color-btn-hover: hsl(60, 2%, 89%);
  --color-btn-border: hsl(333, 71%, 51%);
  --color-btn-border-hover: hsl(60, 2%, 89%);
  --color-btn-text: hsl(0, 0%, 100%);
}

* {
  margin: 0;
  padding: 0;
  transition: background-color 0.6s;
}
html {
  font-family: 'Nunito Sans', sans-serif;
  color: var(--color-text-base);
  scroll-behavior: smooth;
}
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: var(--color-bg);
  margin: 0;
}
a {
  text-decoration: none;
}
h3 {
  font-weight: 400;
}
.subtitle {
  font-size: 28px;
  padding-top: 80px;
  margin-bottom: 82px;
  border-bottom: 2px solid var(--color-primary);
}

